--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -7,9 +7,10 @@
   <meta name="author" content="Moses Ramirez">
     <title>Temple Album</title>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Merriweather:opsz@18..144&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=TASA+Explorer:wght@400..800&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+
+<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:...&display=swap">
+<link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:...&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+<noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:...&display=swap"></noscript>
 
   <link rel="stylesheet" href="styles/filtered-temples.css" media="all">
   <link rel="stylesheet" href="styles/filtered-temples-large.css" media="print" onload="this.media='(min-width: 768px)'">
@@ -23,7 +24,8 @@
   <header>
     <h1>Temple Album</h1>
      
-    <button id="menuBtn" aria-label="Menu">☰</button>
+    <button id="menuBtn" aria-label="Menu" aria-expanded="false" aria-controls="mainNav">☰</button>
+
     
     <nav id="mainNav">
       <a href="#" id="home">Home</a>
