--- a/project/site_plan.html
+++ b/project/site_plan.html
@@ -3,22 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta author="Moses Ramirez">
-    <meta title="Snack Time Hub">
-    <meta description="Snack Time Hub is your go-to destination for delicious snacks and treats.">
-    <meta keywords="snacks, treats, food, dessert">
+    <meta name="author" content="Moses Ramirez">
+    <meta name="title" content="Snack Time Hub">
+    <meta name="description" content="Snack Time Hub is your go-to destination for delicious snacks and treats.">
+    <meta name="keywords" content="snacks, treats, food, dessert">
 
     <title>Snack Time Hub</title>
-    
-  <link rel="stylesheet" href="site_plan.css">
 
-  <script src="site_plan.js" defer></script>
-  
-  
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Merriweather:opsz@18..144&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=TASA+Explorer:wght@400..800&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="site_plan.css">
+    <script src="site_plan.js" defer></script>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Merriweather:opsz@18..144&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=TASA+Explorer:wght@400..800&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
