--- a/form.html
+++ b/form.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Product Review Form</title>
-  <link rel="stylesheet" href="styles/form.css" />
-    <script src="scripts/form.js" defer></script>
+  <link rel="stylesheet" href="styles/form.css">
+  <script src="scripts/form.js" defer></script>
 </head>
 <body>
   <div class="container">
@@ -24,24 +24,24 @@
       <fieldset>
         <legend>Overall Rating</legend>
         <div class="rating">
-          <label><input type="radio" name="rating" value="1" /><span>★</span></label>
-          <label><input type="radio" name="rating" value="2" /><span>★★</span></label>
-          <label><input type="radio" name="rating" value="3" /><span>★★★</span></label>
-          <label><input type="radio" name="rating" value="4" /><span>★★★★</span></label>
-          <label><input type="radio" name="rating" value="5" /><span>★★★★★</span></label>
+          <label><input type="radio" name="rating" value="1"><span>★</span></label>
+          <label><input type="radio" name="rating" value="2"><span>★★</span></label>
+         <label><input type="radio" name="rating" value="3"><span>★★★</span></label>
+         <label><input type="radio" name="rating" value="4"><span>★★★★</span></label>
+         <label><input type="radio" name="rating" value="5"><span>★★★★★</span></label>
         </div>
       </fieldset>
 
       <label for="installDate" class="label-title">Date of Installation</label>
-      <input type="date" id="installDate" name="installDate" placeholder="mm/dd/yyyy" />
+      <input type="date" id="installDate" name="installDate">
 
       <fieldset>
-        <legend>Which features did you find useful in the product?<br /><small>(Check all that apply)</small></legend>
+        <legend>Which features did you find useful in the product?<br><small>(Check all that apply)</small></legend>
         <div class="checkbox-group">
-          <label><input type="checkbox" name="features" value="Durability" /> Durability</label>
-          <label><input type="checkbox" name="features" value="Ease of Use" /> Ease of Use</label>
-          <label><input type="checkbox" name="features" value="Performance" /> Performance</label>
-          <label><input type="checkbox" name="features" value="Design" /> Design</label>
+          <label><input type="checkbox" name="features" value="Durability"> Durability</label>
+          <label><input type="checkbox" name="features" value="Ease of Use"> Ease of Use</label>
+          <label><input type="checkbox" name="features" value="Performance"> Performance</label>
+          <label><input type="checkbox" name="features" value="Design"> Design</label>
         </div>
       </fieldset>
 
@@ -49,7 +49,7 @@
       <textarea id="reviewText" name="reviewText" rows="4" placeholder="Write your review here..."></textarea>
 
       <label for="userName" class="label-title">Your Name <small>(Optional)</small></label>
-      <input type="text" id="userName" name="userName" placeholder="Your name" />
+      <input type="text" id="userName" name="userName" placeholder="Your name">
 
       <button type="submit" class="submit-btn">Post Review</button>
     </form>
