--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Product Review Form">
   <meta name="author" content="Moses Ramirez">
-  
+
   <title>Product Review Form</title>
   <link rel="stylesheet" href="styles/form.css">
   <script src="scripts/form.js" defer></script>
@@ -20,14 +20,17 @@
       <label for="productName" class="label-title">Product Name</label>
       <select id="productName" name="productName" required>
         <option value="">Choose a Product …</option>
-        <option value="Product A">Product A</option>
-       
-      </select>
+        <option value="fc-1888">Flux Capacitor</option>
+        <option value="fc-2050">Power Laces</option>
+        <option value="fs-1987">Time Circuits</option>
+        <option value="ac-2000">Low Voltage Reactor</option>
+        <option value="jj-1969">Warp Equalizer</option>
+</select>
 
       <fieldset>
         <legend>Overall Rating</legend>
         <div class="rating">
-          <label><input type="radio" name="rating" value="1"><span>★</span></label>
+          <label><input type="radio" name="rating" value="1"required><span>★</span></label>
           <label><input type="radio" name="rating" value="2"><span>★★</span></label>
          <label><input type="radio" name="rating" value="3"><span>★★★</span></label>
          <label><input type="radio" name="rating" value="4"><span>★★★★</span></label>
@@ -36,7 +39,7 @@
       </fieldset>
 
       <label for="installDate" class="label-title">Date of Installation</label>
-      <input type="date" id="installDate" name="installDate">
+      <input type="date" id="installDate" name="installDate" required>
 
       <fieldset>
         <legend>Which features did you find useful in the product?<br><small>(Check all that apply)</small></legend>
