--- a/form.html
+++ b/form.html
@@ -27,23 +27,41 @@
         <option value="jj-1969">Warp Equalizer</option>
 </select>
 
-      <fieldset>
-        <legend>Overall Rating</legend>
-        <div class="rating">
-          <label><input type="radio" name="rating" value="1"required><span>★</span></label>
-          <label><input type="radio" name="rating" value="2"><span>★★</span></label>
-         <label><input type="radio" name="rating" value="3"><span>★★★</span></label>
-         <label><input type="radio" name="rating" value="4"><span>★★★★</span></label>
-         <label><input type="radio" name="rating" value="5"><span>★★★★★</span></label>
-        </div>
-      </fieldset>
+     
+  <fieldset>
+    <legend>Overall Rating</legend>
+    <div class="rating">
+      <label>
+        <input type="radio" name="rating" value="1">
+        <span>★</span>
+      </label>
+      <label>
+        <input type="radio" name="rating" value="2">
+        <span>★★</span>
+      </label>
+      <label>
+        <input type="radio" name="rating" value="3">
+        <span>★★★</span>
+      </label>
+      <label>
+        <input type="radio" name="rating" value="4">
+        <span>★★★★</span>
+      </label>
+      <label>
+        <input type="radio" name="rating" value="5">
+        <span>★★★★★</span>
+      </label>
+    </div>
+  </fieldset>
+
+
 
       <label for="installDate" class="label-title">Date of Installation</label>
       <input type="date" id="installDate" name="installDate" required>
 
       <fieldset>
         <legend>Which features did you find useful in the product?<br><small>(Check all that apply)</small></legend>
-        <div class="checkbox-group">
+        <div class="checkbox-group" required>
           <label><input type="checkbox" name="features" value="Durability"> Durability</label>
           <label><input type="checkbox" name="features" value="Ease of Use"> Ease of Use</label>
           <label><input type="checkbox" name="features" value="Performance"> Performance</label>
